# blog-api

./: .env  .gitignore  README.md  app.py  env_dist  pyproject.toml
app/: app.py  config.py
app/db/: __init__.py  models.py
app/db/models/: articles.py
app/db/wrappers/: articles.py
app/dto/: __init__.py  article.py
app/routes/: __init__.py  articles.py
blog_api/: app.py  config.py  dto.py  routes.py
blog_api/db/: __init__.py  crud.py  engine.py  models.py  schemas.py
blog_api/routes/: api.py
migrations/: env.py
migrations/versions/: 0001_add_articles_comments.py  0001_test.py  0002_added_email_field.py  001_create_articles_article_comments_tables.py
