[tool.poetry]
name = "blog-api2"
version = "1.0.0"
description = "rewrite"
authors = ["Nikita <nik.nightness@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
environs = "^10.3.0"
Flask = "^3.0.2"
SQLAlchemy = "^2.0.27"
Flask-SQLAlchemy = "^3.1.1"
pydantic = "^2.6.3"
flask-pydantic = "^0.12.0"
alembic = "^1.13.1"
Flask-Migrate = "^4.0.5"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
